Switch back to Implicit with some JS magic, so much easier

--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -13,7 +13,10 @@
     
     <Grid HorizontalAlignment="Stretch"
           VerticalAlignment="Center">
-        <controls:TwitchBotSetupControl DataContext="{Binding TwitchBotSetupViewModel}"/>
+        <controls:TwitchBotSetupControl DataContext="{Binding TwitchBotSetupViewModel}"
+                                        IsVisible="False"/>
+        <Button Content="WAAAA"
+                Command="{Binding Test}"/>
     </Grid>
     
 </UserControl>
