--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Audiosurf2_Tools.ViewModels"
              xmlns:controls="clr-namespace:Audiosurf2_Tools.Controls"
+             xmlns:models="using:Audiosurf2_Tools.Models"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Audiosurf2_Tools.Controls.TwitchBotControl">
     
@@ -11,12 +12,90 @@
         <viewModels:TwitchBotViewModel/>
     </UserControl.DataContext>
     
-    <Grid HorizontalAlignment="Stretch"
-          VerticalAlignment="Center">
-        <controls:TwitchBotSetupControl DataContext="{Binding TwitchBotSetupViewModel}"
-                                        IsVisible="False"/>
-        <Button Content="WAAAA"
-                Command="{Binding Test}"/>
+    <Grid ColumnDefinitions="*,1.75*"
+          RowDefinitions="50,*"
+          HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
+          ShowGridLines="True">
+        
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="0"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Spacing="5">
+            <Button Content="Connect"
+                    IsEnabled="{Binding !IsConnected}"
+                    Command="{Binding ConnectAsync}"/>
+            <Button Content="Disconnect"
+                    IsEnabled="{Binding IsConnected}"
+                    Command="{Binding Disconnect}"/>
+            <Button Content="Launch Setup"/>
+        </StackPanel>
+        
+        <ItemsControl Grid.Column="0"
+                      Grid.Row="1"
+                      Margin="0,5,5,0"
+                      Background="#AA222222"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      Items="{Binding ChatMessages}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Margin="2.5"
+                               TextWrapping="Wrap"
+                               Text="{Binding}"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+        
+        <ListBox Grid.Column="1"
+                 Grid.Row="1"
+                 Margin="5,5,0,0"
+                 Background="#AA222222"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
+                 Items="{Binding Requests}">
+            <ListBox.ItemTemplate>
+                <DataTemplate DataType="models:TwitchRequestItem">
+                    <Grid ColumnDefinitions="*,150"
+                          RowDefinitions="Auto,Auto,Auto"
+                          Margin="10">
+                        <TextBlock Grid.Column="0"
+                                   Grid.Row="0"
+                                   TextWrapping="Wrap"
+                                   Text="{Binding Title}"/>
+                        <TextBlock Grid.Column="0"
+                                   Grid.Row="1"
+                                   TextWrapping="Wrap"
+                                   Text="{Binding Channel}"/>
+                        <TextBlock Grid.Column="0"
+                                   Grid.Row="2"
+                                   TextWrapping="Wrap"
+                                   Text="{Binding Duration, StringFormat=\{0:mm\\:ss\}}"/>
+                        
+                        <Button Grid.Column="1"
+                                Grid.Row="0"
+                                Grid.RowSpan="2"
+                                Content="Open in Browser"
+                                Command="{Binding OpenLocation}"/>
+                        
+                        <TextBlock Grid.Column="1"
+                                   Grid.Row="2"
+                                   Text="{Binding Requester}"/>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
+        <controls:TwitchBotSetupControl Grid.Column="0"
+                                        Grid.ColumnSpan="2"
+                                        Grid.Row="0"
+                                        Grid.RowSpan="2"
+                                        DataContext="{Binding TwitchBotSetupViewModel}"
+                                        IsVisible="{Binding IsSetupOpen}"/>
+        
     </Grid>
     
 </UserControl>
