--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -5,6 +5,7 @@
              xmlns:viewModels="clr-namespace:Audiosurf2_Tools.ViewModels"
              xmlns:controls="clr-namespace:Audiosurf2_Tools.Controls"
              xmlns:models="using:Audiosurf2_Tools.Models"
+             xmlns:miniControls="clr-namespace:Audiosurf2_Tools.MiniControls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Audiosurf2_Tools.Controls.TwitchBotControl">
     
@@ -15,8 +16,7 @@
     <Grid ColumnDefinitions="*,1.75*"
           RowDefinitions="50,*"
           HorizontalAlignment="Stretch"
-          VerticalAlignment="Stretch"
-          ShowGridLines="True">
+          VerticalAlignment="Stretch">
         
         <StackPanel Grid.Column="0"
                     Grid.ColumnSpan="2"
@@ -31,19 +31,25 @@
             <Button Content="Disconnect"
                     IsEnabled="{Binding IsConnected}"
                     Command="{Binding Disconnect}"/>
-            <Button Content="Launch Setup"/>
+            <Button Content="Launch Setup"
+                    IsEnabled="{Binding !IsConnected}"
+                    Command="{Binding StartOver}"/>
+            <Button Content="Reload Requests"
+                    IsEnabled="{Binding IsConnected}"
+                    Command="{Binding ReloadRequestsPlaylist}"/>
         </StackPanel>
         
         <ItemsControl Grid.Column="0"
                       Grid.Row="1"
                       Margin="0,5,5,0"
                       Background="#AA222222"
+                      CornerRadius="3"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Stretch"
                       Items="{Binding ChatMessages}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Margin="2.5"
+                    <TextBlock Margin="2.5, 5"
                                TextWrapping="Wrap"
                                Text="{Binding}"/>
                 </DataTemplate>
@@ -56,35 +62,11 @@
                  Background="#AA222222"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
+                 CornerRadius="3"
                  Items="{Binding Requests}">
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="models:TwitchRequestItem">
-                    <Grid ColumnDefinitions="*,150"
-                          RowDefinitions="Auto,Auto,Auto"
-                          Margin="10">
-                        <TextBlock Grid.Column="0"
-                                   Grid.Row="0"
-                                   TextWrapping="Wrap"
-                                   Text="{Binding Title}"/>
-                        <TextBlock Grid.Column="0"
-                                   Grid.Row="1"
-                                   TextWrapping="Wrap"
-                                   Text="{Binding Channel}"/>
-                        <TextBlock Grid.Column="0"
-                                   Grid.Row="2"
-                                   TextWrapping="Wrap"
-                                   Text="{Binding Duration, StringFormat=\{0:mm\\:ss\}}"/>
-                        
-                        <Button Grid.Column="1"
-                                Grid.Row="0"
-                                Grid.RowSpan="2"
-                                Content="Open in Browser"
-                                Command="{Binding OpenLocation}"/>
-                        
-                        <TextBlock Grid.Column="1"
-                                   Grid.Row="2"
-                                   Text="{Binding Requester}"/>
-                    </Grid>
+                    <miniControls:RequestItemControl DataContext="{Binding}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
@@ -93,6 +75,9 @@
                                         Grid.ColumnSpan="2"
                                         Grid.Row="0"
                                         Grid.RowSpan="2"
+                                        HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Stretch"
+                                        Background="#000000"
                                         DataContext="{Binding TwitchBotSetupViewModel}"
                                         IsVisible="{Binding IsSetupOpen}"/>
         
