--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -8,79 +8,162 @@
              xmlns:miniControls="clr-namespace:Audiosurf2_Tools.MiniControls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Audiosurf2_Tools.Controls.TwitchBotControl">
-    
+
     <UserControl.DataContext>
-        <viewModels:TwitchBotViewModel/>
+        <viewModels:TwitchBotViewModel />
     </UserControl.DataContext>
-    
+
     <Grid ColumnDefinitions="*,1.75*"
-          RowDefinitions="50,*"
+          RowDefinitions="Auto,Auto,*"
           HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch">
-        
-        <StackPanel Grid.Column="0"
-                    Grid.ColumnSpan="2"
-                    Grid.Row="0"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Spacing="5">
-            <Button Content="Connect"
-                    IsEnabled="{Binding !IsConnected}"
-                    Command="{Binding ConnectAsync}"/>
-            <Button Content="Disconnect"
-                    IsEnabled="{Binding IsConnected}"
-                    Command="{Binding Disconnect}"/>
-            <Button Content="Launch Setup"
-                    IsEnabled="{Binding !IsConnected}"
-                    Command="{Binding StartOver}"/>
-            <Button Content="Reload Requests"
-                    IsEnabled="{Binding IsConnected}"
-                    Command="{Binding ReloadRequestsPlaylist}"/>
-        </StackPanel>
-        
-        <ItemsControl Grid.Column="0"
-                      Grid.Row="1"
-                      Margin="0,5,5,0"
-                      Background="#AA222222"
-                      CornerRadius="3"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch"
-                      Items="{Binding ChatMessages}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Margin="2.5, 5"
-                               TextWrapping="Wrap"
-                               Text="{Binding}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-        
-        <ListBox Grid.Column="1"
-                 Grid.Row="1"
-                 Margin="5,5,0,0"
-                 Background="#AA222222"
-                 HorizontalAlignment="Stretch"
-                 VerticalAlignment="Stretch"
-                 CornerRadius="3"
-                 Items="{Binding Requests}">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="models:TwitchRequestItem">
-                    <miniControls:RequestItemControl DataContext="{Binding}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        
+
+        <GroupBox Grid.Column="0"
+                  Grid.ColumnSpan="2"
+                  Grid.Row="0"
+                  Margin="0,0,0,2.5"
+                  Header="Controls"
+                  BorderThickness="1"
+                  CornerRadius="3">
+
+            <ScrollViewer HorizontalScrollBarVisibility="Auto"
+                          HorizontalAlignment="Stretch"
+                          HorizontalContentAlignment="Stretch">
+                <Grid ColumnDefinitions="*,*,*,*">
+                    <Button Grid.Column="0"
+                            Background="#226622"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Center"
+                            IsEnabled="{Binding !IsConnected}"
+                            Command="{Binding ConnectAsync}">
+                        <Grid ColumnDefinitions="Auto, *">
+                            <Image Grid.Column="0"
+                                   Margin="0,0,2.5,0"
+                                   Height="20"
+                                   Source="avares://Audiosurf2_Tools/Assets/connect.png" />
+                            <TextBlock Grid.Column="1"
+                                       Margin="2.5,0,0,0"
+                                       VerticalAlignment="Center"
+                                       Text="Connect" />
+                        </Grid>
+                    </Button>
+                    <Button Grid.Column="1"
+                            IsEnabled="{Binding IsConnected}"
+                            Background="#662222"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Center"
+                            Command="{Binding Disconnect}">
+                        <Grid ColumnDefinitions="Auto, *">
+                            <Image Grid.Column="0"
+                                   Margin="0,0,2.5,0"
+                                   Height="20"
+                                   Source="avares://Audiosurf2_Tools/Assets/disconnect.png" />
+                            <TextBlock Grid.Column="1"
+                                       Margin="2.5,0,0,0"
+                                       VerticalAlignment="Center"
+                                       Text="Disconnect" />
+                        </Grid>
+                    </Button>
+                    <Button Grid.Column="2" IsEnabled="{Binding IsConnected}"
+                            Background="#664422"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Center"
+                            Command="{Binding ReloadRequestsPlaylist}">
+                        <Grid ColumnDefinitions="Auto, *">
+                            <Image Grid.Column="0"
+                                   Margin="0,0,2.5,0"
+                                   Height="20"
+                                   Source="avares://Audiosurf2_Tools/Assets/refresh.png" />
+                            <TextBlock Grid.Column="1"
+                                       Margin="2.5,0,0,0"
+                                       VerticalAlignment="Center"
+                                       Text="Reload Requests" />
+                        </Grid>
+                    </Button>
+                    <Button Grid.Column="3"
+                            Background="#222266"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Center"
+                            IsEnabled="{Binding !IsConnected}"
+                            Command="{Binding StartOver}">
+                        <Grid ColumnDefinitions="Auto, *">
+                            <Image Grid.Column="0"
+                                   Margin="0,0,2.5,0"
+                                   Height="20"
+                                   Source="avares://Audiosurf2_Tools/Assets/setup.png" />
+                            <TextBlock Grid.Column="1"
+                                       Margin="2.5,0,0,0"
+                                       VerticalAlignment="Center"
+                                       Text="Launch Setup" />
+                        </Grid>
+                    </Button>
+                </Grid>
+            </ScrollViewer>
+
+        </GroupBox>
+
+        <Separator Grid.Column="0"
+                   Grid.ColumnSpan="2"
+                   Grid.Row="1"
+                   Margin="10,0"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Center"
+                   BorderThickness="1"
+                   BorderBrush="White" />
+
+        <GroupBox Grid.Column="0"
+                  Grid.Row="2"
+                  Margin="0,2.5,1.5,0"
+                  Header="Chat"
+                  BorderThickness="1"
+                  CornerRadius="3">
+
+            <ItemsControl Background="#AA222222"
+                          CornerRadius="3"
+                          HorizontalAlignment="Stretch"
+                          VerticalAlignment="Stretch"
+                          Items="{Binding ChatMessages}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Margin="2.5, 5"
+                                   TextWrapping="Wrap"
+                                   Text="{Binding}" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+        </GroupBox>
+
+        <GroupBox Grid.Column="1"
+                  Grid.Row="2"
+                  Margin="0,2.5,0,0"
+                  Header="Requests"
+                  BorderThickness="1"
+                  CornerRadius="3">
+            <ListBox Background="#AA222222"
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Stretch"
+                     CornerRadius="3"
+                     DoubleTapped="InputElement_OnDoubleTapped"
+                     Items="{Binding Requests}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="models:TwitchRequestItem">
+                        <miniControls:RequestItemControl DataContext="{Binding}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </GroupBox>
+
         <controls:TwitchBotSetupControl Grid.Column="0"
                                         Grid.ColumnSpan="2"
                                         Grid.Row="0"
-                                        Grid.RowSpan="2"
+                                        Grid.RowSpan="3"
                                         HorizontalAlignment="Stretch"
                                         VerticalAlignment="Stretch"
                                         Background="#000000"
                                         DataContext="{Binding TwitchBotSetupViewModel}"
-                                        IsVisible="{Binding IsSetupOpen}"/>
-        
+                                        IsVisible="{Binding IsSetupOpen}" />
+
     </Grid>
-    
+
 </UserControl>
