--- a/Audiosurf2_Tools/MiniControls/RequestItemControl.axaml
+++ b/Audiosurf2_Tools/MiniControls/RequestItemControl.axaml
@@ -10,7 +10,7 @@
         <models:TwitchRequestItem/>    
     </UserControl.DataContext>
     
-    <Grid ColumnDefinitions="*,150"
+    <Grid ColumnDefinitions="*,Auto,150"
           RowDefinitions="Auto,Auto,Auto"
           Margin="10">
         <TextBlock Grid.Column="0"
@@ -25,25 +25,60 @@
                    Grid.Row="2"
                    TextWrapping="Wrap"
                    Text="{Binding Duration, StringFormat=\{0:mm\\:ss\}}"/>
-                    
+        
         <Button Grid.Column="1"
                 Grid.Row="0"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Center"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
+                Margin="2.5"
+                Command="{Binding MoveUp}">
+            <Image Height="20"
+                   Width="20"
+                   Source="avares://Audiosurf2_Tools/Assets/arrowup.png"/>
+        </Button>
+            
+        <Button Grid.Column="1"
+                Grid.Row="1"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Margin="2.5"
+                Command="{Binding MoveDown}">
+            <Image Height="20"
+                   Width="20"
+                   Source="avares://Audiosurf2_Tools/Assets/arrowdown.png"/>
+        </Button>
+        
+        <Button Grid.Column="2"
+                Grid.Row="0"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Center"
+                Margin="2.5"
+                Background="#222266"
                 Content="Open in Browser"
                 Command="{Binding OpenLocation}"/>
         
-        <Button Grid.Column="1"
+        <Button Grid.Column="2"
                 Grid.Row="1"
+                VerticalAlignment="Stretch"
+                VerticalContentAlignment="Center"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
+                Margin="2.5"
                 Background="#662222"
                 Content="Remove"
                 Command="{Binding Remove}"/>
                     
-        <TextBlock Grid.Column="1"
+        <TextBlock Grid.Column="2"
                    Grid.Row="2"
-                   Text="{Binding Requester}"/>
+                   VerticalAlignment="Center"
+                   Margin="2.5"
+                   Text="{Binding Requester, StringFormat=By: {0}}"/>
     </Grid>
     
 </UserControl>
